--- a/config/west.yml
+++ b/config/west.yml
@@ -5,7 +5,7 @@ manifest:
   projects:
     - name: zmk
       remote: petejohanson
-      revision: core/zephyr-3.0-update
+      revision: core/zephyr-v3.0.0-update
       import: app/west.yml
   self:
     path: config
