--- a/config/west.yml
+++ b/config/west.yml
@@ -4,8 +4,8 @@ manifest:
       url-base: https://github.com/zmkfirmware
   projects:
     - name: zmk
-      remote: zmkfirmware
-      revision: main
+      remote: alansaul
+      revision: debug/split_connection
       import: app/west.yml
   self:
     path: config
