--- a/config/west.yml
+++ b/config/west.yml
@@ -2,6 +2,8 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: alansaul
+      url-base: https://github.com/alansaul
   projects:
     - name: zmk
       remote: alansaul
