--- a/config/dactyl_manuform_5x7.conf
+++ b/config/dactyl_manuform_5x7.conf
@@ -2,3 +2,4 @@ CONFIG_BT_LOG_LEVEL_DBG=n
 CONFIG_ZMK_USB_LOGGING=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
 CONFIG_BT_SMP_SC_ONLY=n
+CONFIG_BT_SMP_SC_PAIR_ONLY=n
