--- a/config/dactyl_manuform_5x7.conf
+++ b/config/dactyl_manuform_5x7.conf
@@ -4,3 +4,4 @@ CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
 CONFIG_BT_SMP_SC_ONLY=n
 CONFIG_BT_SMP_SC_PAIR_ONLY=n
 CONFIG_BT_CTLR_PRIVACY=y
+CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
