--- a/config/dactyl_manuform_5x7.conf
+++ b/config/dactyl_manuform_5x7.conf
@@ -5,3 +5,4 @@ CONFIG_BT_SMP_SC_ONLY=n
 CONFIG_BT_SMP_SC_PAIR_ONLY=n
 CONFIG_BT_CTLR_PRIVACY=y
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+CONFIG_BT_LL_SW_LLCP_LEGACY=y
