--- a/config/dactyl_manuform_5x7.conf
+++ b/config/dactyl_manuform_5x7.conf
@@ -6,3 +6,4 @@ CONFIG_BT_SMP_SC_PAIR_ONLY=n
 CONFIG_BT_CTLR_PRIVACY=y
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 CONFIG_BT_LL_SW_LLCP_LEGACY=y
+CONFIG_BT_ATT_RETRY_ON_SEC_ERR=n
