--- a/config/dactyl_manuform_5x7.conf
+++ b/config/dactyl_manuform_5x7.conf
@@ -1,3 +1,19 @@
 CONFIG_ZMK_USB_LOGGING=y
 CONFIG_BT_LOG_LEVEL_DBG=y
+
+# Enable logging (and redirect printk to log output)
+CONFIG_LOG=y
+CONFIG_LOG_PRINTK=y
+CONFIG_LOG_MODE_IMMEDIATE=y
+
+# Free up UART
+CONFIG_SERIAL=y
+CONFIG_UART_CONSOLE=n
+CONFIG_LOG_BACKEND_UART=n
+
+# Enable logging on RTT
+CONFIG_LOG_BACKEND_RTT=y
+CONFIG_USE_SEGGER_RTT=y
 CONFIG_SEGGER_RTT_BUFFER_SIZE_UP=8192
+# Always get the latest logs, even if not read yet
+CONFIG_LOG_BACKEND_RTT_MODE_OVERWRITE=y
